# rag-document-qa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  chunking.py  config.py  ingest.py  llm.py  logging_config.py  main.py  schemas.py  store.py
tests/: test_api.py  test_chunking.py  test_store.py
